Reduced white space around middle pile. Decreased padding on user div to fix overlap of turn message on smaller devices.

--- a/components/cards/cards.module.scss
+++ b/components/cards/cards.module.scss
@@ -6,7 +6,7 @@ $primary-color: #E43D12;
   overflow-x: auto;
   width: 100%;
   padding: .5rem .25rem;
-  margin: 0 auto 1rem auto;
+  margin: 0 auto .5rem auto;
   scrollbar-color: $primary-color white;
   > li {
     width: 50px;
