--- a/components/hand/hands.module.scss
+++ b/components/hand/hands.module.scss
@@ -59,7 +59,7 @@ $secondary-color: #FFA2B6;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 1rem;
+  padding: .25rem 1rem;
   > button {
     border: 2px solid $primary-color;
     padding: .5rem 1rem;
